force-app/main/default/objects/Plan_Family__c.object
<CustomObject>
    <description>Logical Grouping for plans with shared characteristics</description>
    <fields>
        <fullName>Age_Off_Criteria__c</fullName>
        <label>Age Off Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On_Day</fullName>
                    <label>On Day</label>
                </value>
                <value>
                    <fullName>First Of Following Month</fullName>
                </value>
                <value>
                    <fullName>End Of Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Covered_Members__c</fullName>
        <label>Covered Members</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual+Family</fullName>
                </value>
                <value>
                    <fullName>Individual Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discontinued_Date__c</fullName>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Category_Description__c</fullName>
        <label>Financial Category Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Category__c</fullName>
        <label>Financial Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plan_Family_Financial_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Plan_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Plan Family</label>
        <referenceTo>Plan_Family__c</referenceTo>
        <relationshipLabel>Plan Family Versions</relationshipLabel>
        <relationshipName>Plan_Family_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Cycle__c</fullName>
        <label>Plan Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plan_Family_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Family</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Line_Of_Business__c</columns>
        <columns>Covered_Members__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Discontinued_Date__c</columns>
        <columns>Age_Off_Criteria__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Plan Families</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Plan_Families</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Line_Of_Business__c</columns>
        <columns>Covered_Members__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Discontinued_Date__c</columns>
        <columns>Age_Off_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Plan Families</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Plan_Families</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Line_Of_Business__c</columns>
        <columns>Covered_Members__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Discontinued_Date__c</columns>
        <columns>Age_Off_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Workspace,Active</value>
        </filters>
        <filters>
            <field>Closed_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2020</value>
        </filters>
        <label>Inactive Plan Families</label>
    </listViews>
    <listViews>
        <fullName>Workspace</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Line_Of_Business__c</columns>
        <columns>Covered_Members__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>Discontinued_Date__c</columns>
        <columns>Age_Off_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Workspace</value>
        </filters>
        <label>Workspace</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Families</pluralLabel>
    <recordTypes>
        <fullName>Marketing_Plan_Family</fullName>
        <active>true</active>
        <label>Marketing Plan Family</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>