force-app/main/default/objects/Plan_Family__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Line_Of_Business__c</columns>
    <columns>Covered_Members__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Discontinued_Date__c</columns>
    <columns>Age_Off_Criteria__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Plan Families</label>
</ListView>