force-app/main/default/objects/Plan_Family__c/listViews/Workspace.listView-meta.xml
<ListView>
    <fullName>Workspace</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Line_Of_Business__c</columns>
    <columns>Covered_Members__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Closed_Date__c</columns>
    <columns>Discontinued_Date__c</columns>
    <columns>Age_Off_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Workspace</value>
    </filters>
    <label>Workspace</label>
</ListView>